# wasm-bindgen-ts-decl

./: Cargo.toml  README.md
src/: decl.rs  func.rs  main.rs  module.rs  pat.rs  ty.rs  util.rs  wasm.rs
