[package]
name = "wasm-bindgen-ts-decl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
swc_ecma_parser = { version = "0", features = ["typescript"] }
swc_common = { version = "0.29", features = ["tty-emitter"] }
swc_ecma_ast = { version = "0" }
syn = { version = "1", features = ["full", "extra-traits", "visit", "visit-mut", "parsing"] }
walkdir = "2"
prettyplease = "0.1"
lazy_static = "1"
